GNOME Bugzilla – Bug 724411
GtkAboutDialog: License visible even if not set and predefined license display broken
Last modified: 2014-02-22 02:24:03 UTC
The following works in 3.10 but not with trunk. * Not setting any license still shows the license button with an empty text field: http://imgur.com/CUiPFqd * Using gtk_about_dialog_set_license_type(GTK_LICENSE_GPL_2_0) shows a broken link: http://imgur.com/gMNrL4t
hmm, I can't reproduce this here. I guess this might be the python bindings interfering and setting the license property to an empty string instead of NULL. No idea how you could get the license tab to show while the license type is set to GPL2. I've pushed a possible fix for the empty license tab.
Thanks for looking into it. No, that wasn't it. text is NULL and type UNKNOWN and pygobject doesn't have AboutDialog overrides. I did some more testing and the license tab shows once the credits tab is shown (either artists, authors or translator_credits is set)
not seeing that here.
Sorry for not trying to reduce the example earlier, the problem is the show_all() call. ################# from gi.repository import Gtk dialog = Gtk.AboutDialog() dialog.set_artists("foo") dialog.show_all() Gtk.main() ################# If this isn't supposed to work, please close this bug.