Don't show an empty license tab

It is not useful to show a license tab, if there's no license
to read.  This was pointed out as a possibility in
https://bugzilla.gnome.org/show_bug.cgi?id=724411